feat: add tweets in landing

--- a/locales/fa.json
+++ b/locales/fa.json
@@ -46,6 +46,9 @@
     "addToCalendar": "افزودن به تقویم",
     "scheduling": "زمان بندی"
   },
+  "landing": {
+    "tweets": "توییت\u200Cها"
+  },
   "validation": {
     "email": "ایمیل معتبر نیست",
     "phoneNumber": "شماره تفلن معتبر نیست. باید شامل ۱۱ عدد باشد",
