--- a/locales/fa.json
+++ b/locales/fa.json
@@ -52,7 +52,7 @@
   },
   "validation": {
     "email": "ایمیل معتبر نیست",
-    "phoneNumber": "شماره تفلن معتبر نیست. باید شامل ۱۱ عدد باشد",
+    "phoneNumber": "شماره تلفن معتبر نیست. باید شامل ۱۱ عدد باشد",
     "required": "اجباری"
   },
   "time": {
